# db

./: .gitignore  Cargo.toml  Justfile  README.md  index.html
.github/workflows/: cd.yaml
databases/: qa.sqlite
public/: styles.css
src/: lib.rs  main.rs
src/aceditor/: Cargo.toml
src/app/: editor.rs  embedded.rs  header.rs  mod.rs  query.rs  sidebar.rs  table_view.rs
src/web/: Cargo.toml
src/web/src/: lib.rs
src/web/src/app/: editor.rs  embedded.rs  header.rs  query.rs  state.rs  table_view.rs
src/web/src/worker/: mod.rs
src/worker/: mod.rs  sqlitend.rs
