[package]
name = "qa"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[[bin]]
name = "sqlite3"
path = "src/bin/sqlite3.rs"

[dependencies]
aceditor = { path = "../aceditor" }

console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
fragile = { workspace = true }
hex = { workspace = true }
js-sys = { workspace = true }
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
reactive_stores = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
sqlite-wasm-rs = { workspace = true }
sqlite-wasm-vec = { workspace = true }
sqlite-wasm-vfs = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }

[features]
default = ["sqlite3"]
sqlite3 = []

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
